<resources>
    <string name="app_name">Movie_Deck</string>
    <string name="hey_ready_for_tonight">Hey, Ready For Tonight</string>
    <string name="let_us_find_you_a_movie_for_your_interest">Let us find you a movie for your interest</string>
    <string name="explore">Explore</string>
    <string name="all_rights_reserved_2022">All rights reserved.2022</string>
    <string name="img">img</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="imgfrag">imgfrag</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username_or_email">Username or email</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_username">Enter username</string>
    <string name="_254712345678">+254712345678</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Signup</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="person">Person</string>
    <string name="settings">Settings</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="upcoming">Upcoming</string>
    <string name="trending">Trending</string>
    <string name="movies">MOVIES</string>
    <string name="scar">Scar</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="movie_deck">Movie Deck</string>
    <string name="Watchlist">Watchlist</string>
</resources>