<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="mylogin"
            type="com.moringaschool.movie_deck.ui.fragments.LoginFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".LoginFragment"
        tools:layout_editor_absoluteX="-42dp"
        tools:layout_editor_absoluteY="-4dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="113dp"
            android:layout_height="18dp"
            android:layout_marginStart="40dp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toTopOf="@+id/checkBox" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="118dp"
            android:layout_height="31dp"
            android:layout_marginStart="28dp"
            android:text="@string/remember_me"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="34dp"
            android:layout_height="26dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/imgfrag" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/google"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/imgfrag"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="264dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_button"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="262dp"
            android:layout_height="56dp"
            android:hint="@string/username_or_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usrEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="262dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>