<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="256dp"
        android:layout_height="288dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:fontFamily="casual"
        android:text="@string/hey_ready_for_tonight"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subheading"
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="212dp"
        android:text="@string/let_us_find_you_a_movie_for_your_interest"
        android:textColor="@color/gray"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heading"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/explore"
        android:layout_width="244dp"
        android:layout_height="44dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/custom_button"
        android:text="@string/explore"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explore"
        app:srcCompat="@drawable/facebook"
        android:contentDescription="@string/img" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/facebook"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toTopOf="@+id/facebook"
        android:contentDescription="@string/img"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/reddit"
        android:contentDescription="@string/img" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="27dp"
        android:layout_height="0dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/img"
        app:srcCompat="@drawable/insta" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="16dp"
        android:text="@string/all_rights_reserved_2022"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.392" />

</androidx.constraintlayout.widget.ConstraintLayout>