<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="95dp"
        android:layout_marginTop="12dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDeck"
        app:srcCompat="@drawable/mvd" />

    <TextView
        android:id="@+id/signupTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />



    <TextView
        android:id="@+id/svg"
        android:layout_width="380dp"
        android:layout_height="228dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBtn"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginBottom="12dp"
        android:text="Dark Mode"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/svg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/movieDeck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/movie_deck"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="266dp"
        android:layout_height="52dp"
        android:hint="@string/enter_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:textColorHint="#757575"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="263dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_full_name"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_add"
            android:drawablePadding="10dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/phoneNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="264dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/_254712345678"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/fullName"
        app:layout_constraintStart_toStartOf="@+id/fullName"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <EditText
        android:id="@+id/passWd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="262dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_lock2"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/cPassWd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="262dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_privacy"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/passWd"
        app:layout_constraintStart_toStartOf="@+id/passWd"
        app:layout_constraintTop_toBottomOf="@+id/passWd" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="172dp"
        android:layout_height="49dp"
        android:layout_marginTop="9dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@+id/cPassWd"
        app:layout_constraintStart_toStartOf="@+id/cPassWd"
        app:layout_constraintTop_toBottomOf="@+id/cPassWd" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>